# systools

./: LICENSE  LICENSE.txt  PyPi_Setup_Tutorial.txt  README.md  README.rst  requirements_systool.yml  runod_libs.txt  set_env_runOD.txt  setup.cfg  setup.py  systra.yml
.spyproject/config/: workspace.ini
docs/: conf.py  index.rst  modules.rst  sysgadgets.helpers.rst
examples/: data_examples.ipynb  ex01_data.ipynb  ex02_plot.ipynb  ex03_linreg.ipynb  ex04_distribution.ipynb  linear_regression_example.py  regModel_ATRA=EMPREGOS_intercepNO_ZN119.html  regModel_PROD=POP+DOMICILIOS+PEA_intercepYES_ZN119.html  test.py
examples/.ipynb_checkpoints/: data_examples-checkpoint.ipynb  ex01_data-checkpoint.ipynb  ex03_linreg-checkpoint.ipynb  example_linreg-checkpoint.ipynb
examples/examples_databases/: input_distribuicao.txt  input_geracao.xlsx
main/systool/: __init__.py  data.py  geo.py  linreg.py  testing.py
main/systool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
systool/: __init__.py  data.py  geo.py  linreg.py  plot.py  report.py
systool/helpers/: charts.py  get_ftp_data.py  linear_regression_make.py  linear_regression_plot.py  maps.py
systools/: data.py  distribuition.py  geo.py  linreg.py  plot.py  report.py
systools/helpers/: linear_regression_make.py  linear_regression_plot.py  miscFunctions.py  readWrite.py
tests/: context.py  data_tp.py  geo_tp.py  linreg_tp.py  plot_tp.py  test_data.py  test_general.py
tests/test_databases/: ESTACAO_ONIBUS.shp  REGIONAL.dbf  REGIONAL.shx  degree_test_geo_utm.dbf  degree_test_geo_utm.prj  test.col  test.csv  (+36 more)
(+54 files in other folders)
