[metadata]
name = systools
version = 0.0.1
author = bruna-calazans
author_email = brunacalazans@rungue.com
description = Pacote para acelerar a análise de dados e produção de mapas no trabalho
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bruna-calazans/systools
project_urls =
    Bug Tracker = https://github.com/bruna-calazans/systools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src